# Dtos/NewPassengerDto.cs
@@ -1,0 +1,9 @@
+﻿namespace Flights7.Dtos
+{
+    public record NewPassengerDto(
+        string Email,
+        string FirstName,
+        string LastName,
+        bool Gender
+        );
+}
