# ReadModels/PassengerRm.cs
@@ -1,0 +1,8 @@
+﻿namespace Flights7.ReadModels
+{
+    public record PassengerRm(
+        string Email,
+        string FirstName,
+        string LastName,
+        bool Gender);
+}
